--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,7 +4,9 @@
     - name: Full Name
       value: Kazi Shahrukh Omar
     - name: Languages
-      value: English, Bengali
+      value: English (fluent), Bengali (native)
+    - name: Email
+      value: komar3@uic.edu
 
 - title: Education
   type: time_table
@@ -14,18 +16,16 @@
       year: 2021 - 2026
       description:
         - "GPA (Current): 4.00/4.00"
-        - "Advised by: <a href='https://fmiranda.me/'>Dr. Fabio Miranda</a>"
-        - "Research area: urban computing, data analytics & visualization, applied machine learning"
-    - title: Bachelor of Science, Computer Science
+        - "Advisor: <a href='https://fmiranda.me/'>Dr. Fabio Miranda</a>"
+        - "Research area: Visualization and Visual analytics, Big Data Analysis, Applied Machine Learning"
+    - title: Bachelor of Science, Computer Science & Engineering
       institution: "<a href='https://mist.ac.bd/'>Military Institute of Science and Tehcnology, Bangladesh</a>"
       year: 2015 - 2019
       description:
         - "GPA: 3.71/4.00 (Top 10th percentile)"
-        - "Thesis Supervisor: <a href='https://mist.ac.bd/department/cse/facultyMembers/lt_col_muhammad_nazrul_islam_phd-47'>Dr. Muhammad Nazrul Islam</a>"
-        - title: "Research Experience:"
-          contents:
-            - "<p align='justify' style='margin-bottom:0'><small>Developed a prediction model to detect autism spectrum disorder (ASD) for different age groups using a merged random forest (CART and ID3) classifier. The model could effectively predict autistic traits for all three age groups and was later deployed in a mobile application.</small></p>"
-            - "<p align='justify'><small>Developed a system for tracking Alzheimer patients’ health and location through IOT hardware modules and a mobile application.</small></p>"
+        - "Thesis Advisor: <a href='https://mist.ac.bd/department/cse/facultyMembers/lt_col_muhammad_nazrul_islam_phd-47'>Dr. Muhammad Nazrul Islam</a>"
+        - "<b>Thesis</b>: Developed a prediction model to detect autism spectrum disorder (ASD) for different age groups using a merged random forest (CART and ID3) classifier. The model could effectively predict autistic traits for all three age groups and was later deployed in a mobile application."
+        - "<b>Other Research Project</b>: Developed a system for tracking Alzheimer patients’ health and location through IOT hardware modules and a mobile application."
 
 - title: Experience
   type: time_table
@@ -41,17 +41,24 @@
       institution: "<a href='https://www.uic.edu/'>University of Illinois at Chicago, USA</a>"
       year: Aug 2021 - Present
       description:
-        - "Supervisor: <a href='https://fmiranda.me/'>Dr. Fabio Miranda</a>"
-        - title: "Research Experience:"
-          contents:
-            - "<p align='justify' style='margin-bottom:0'><small>Developed a comprehensive toolkit for gait data analysis and visualization (ongoing).</small></p>"
-            - "<p align='justify' style='margin-bottom:0'><small align='justify'>Investigated coverage of OpenStreetMap (OSM) sidewalk data and computed the trustworthiness index as an alternative measure to assess the quality of the data. Our study takes a step toward understanding OSM sidewalk data quality by evaluating its coverage and reliability.</small></p>"
-            - "<p align='justify' style='margin-bottom:0'><small align='justify'>Developed a novel computational framework based on a conditional generative adversarial neural network that enables the quantification of sunlight access and shadows at a global scale.</small></p>"
-            - "<p align='justify'><small>Developed an in-memory model to approximate spatiotemporal mobility-flow queries based on NeuralCubes - a neural network model for learning query-result approximation.</small></p>"
+        - "Advisor: <a href='https://fmiranda.me/'>Dr. Fabio Miranda</a>"
+        - "Research on Visual Analytics and Machine Learning for Urban Planning and Health Informatics."
+          # contents:
+          #   - "<p align='justify' style='margin-bottom:0'><small>Developed a comprehensive toolkit for gait data analysis and visualization (ongoing).</small></p>"
+          #   - "<p align='justify' style='margin-bottom:0'><small align='justify'>Investigated coverage of OpenStreetMap (OSM) sidewalk data and computed the trustworthiness index as an alternative measure to assess the quality of the data. Our study takes a step toward understanding OSM sidewalk data quality by evaluating its coverage and reliability.</small></p>"
+          #   - "<p align='justify' style='margin-bottom:0'><small align='justify'>Developed a novel computational framework based on a conditional generative adversarial neural network that enables the quantification of sunlight access and shadows at a global scale.</small></p>"
+          #   - "<p align='justify'><small>Developed an in-memory model to approximate spatiotemporal mobility-flow queries based on NeuralCubes - a neural network model for learning query-result approximation.</small></p>"
 
     - title: Graduate Teaching Assistant
       institution: "<a href='https://www.uic.edu/'>University of Illinois Chicago, USA</a>"
-      year: Aug 2023 - Present
+      year: Jan 2024 - May 2024
+      description:
+        - "<a href='https://ecologylab.net/courses/ui/index.html'>CS 422: User Interface Design and Programming</a>"
+        - "Course Instructor: Dr. Andruid Kerne."
+
+    - title: Graduate Teaching Assistant
+      institution: "<a href='https://www.uic.edu/'>University of Illinois Chicago, USA</a>"
+      year: Aug 2023 - Dec 2023
       description:
         - "<a href='https://fmiranda.me/courses/cs424-fall-2023/'>CS 424: Visualization and Visual Analytics</a>"
         - "Course Instructor: Dr. Fabio Miranda."
@@ -72,14 +79,42 @@
       institution: "<a href='https://uttarauniversity.edu.bd/'>Uttara University, Bangladesh</a>"
       year: Jul 2019 - Jun 2021
       description:
-        - "Courses Taught: Discrete Mathematics - Computer Peripheral, Interfacing and Maintenance - Digital Logic Design - Computer Graphics - Object Oriented Programming - Design and Analysis of Algorithms - Data Structures."
+        - "Courses Taught: Discrete Mathematics, Computer Peripheral Interfacing and Maintenance, Digital Logic Design, Computer Graphics, Object Oriented Programming, Design and Analysis of Algorithms, Data Structures."
 
-# - title: Open Source Projects
-#   type: time_table
-#   contents:
-#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-#       year: 2015-now
-#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+- title: Projects
+  type: time_table
+  contents:
+    # All course projects and research projects
+    # - title: Visual Analytics for Supervised Prediction of Patient Symptoms
+    #   year: 2023 - Present
+    #   description:
+    #     - Visualization system for designed to predict symptoms after the completion of cancer treatment.
+    #     - Analysis of longitudinal treatment toxicity and model building.
+
+    # - title: vINCI - Clinically-Validated Integrated Support for Assistive Care and Lifestyle Improvement, the Human Link
+    #   year: 2018-2019
+    #   description:
+    #     - Bachelor's Thesis
+    #     - Designed, tested, and developed an interface for improving older adults' QoL using IoT.
+    #     - Second prize for best research project presentation at a Politehnica University competition.
+
+- title: Open Source
+  type: time_table
+  contents:
+    - title: <a href="https://github.com/uic-evl/deep-umbra">Deep Umbra</a>
+      year: 2022-2023
+      description: An accumulated shadow computation technique along with visual analytics system and shadow dataset for over 100 cities.
+    - title: <a href="https://github.com/komar41/vigma">VIGMA</a>
+      year: 2023-2024
+      description: A comprehensive system for gait data processing, analysis, and visualization.
+
+- title: Talks and Presentations
+  type: time_table
+  contents:
+    - title: "Crowdsourcing and Sidewalk Data: A Preliminary Study on the Trustworthiness of OpenStreetMap Data in the US"
+      description: Paper presented at ASSETS’22 Workshop on The Future of Urban Accessibility.
+    - title: Visual Analytics Approaches for Facilitating Explainability of Graph Neural Networks
+      description: Ph.D. Qualifier Exam, 2023
 
 - title: Honors and Awards
   type: time_table
@@ -92,8 +127,12 @@
 - title: Services
   type: time_table
   contents:
+    - year: 2022, 2023, 2024
+      description: Paper reviewer for PacificVis 2024, EuroVis 2023-2024, IEEE VIS 2022-2024.
     - year: 2022, 2023
       description: "Volunteer for <a href='https://www.evl.uic.edu/events/2655'>CAVE3 demos</a> hosted by EVL, UIC."
+    - year: 2022-2023
+      description: "<a href='https://bsa.org.uic.edu/officers'>Vice President of Media</a> of Bangladeshi Student Association at UIC."
     - year: Oct 2021
       description: "<a href='https://www.evl.uic.edu/events/2596'>IEEE VIS Satelite Event (2021)</a> volunteer. Held at EVL, UIC."
     - year: 2018
@@ -116,18 +155,24 @@
   contents:
     - title: Programming Languages
       items:
-        - "Proficient: Python, C/C++"
-        - "Familiar: JavaScript, Java, R, MATLAB, Shell Scripting, Cython"
+        - "Proficient: Python, JavaScript, C/C++"
+        - "Familiar: TypeScript, Java, R, MATLAB, Shell Scripting, Cython"
     - title: Web
       items:
-        - "HTML, CSS, Bootstrap, React, Angular, Flask"
+        - "React, Angular, Flask, HTML, CSS, Bootstrap"
+    - title: Mobile App Development
+      items:
+        - "React Native, Android Studio"
     - title: Libraries
       items:
-        - "Data processing: NumPy, Pandas, Dask"
-        - "Geo-data processing: Geopandas, Osmium, Overpass, PlotOptiX, Pyrosm, Shapely, Spatialpandas"
-        - "Data visualization: Matplotlib, Seaborn, Plotly, Vega-lite, d3.js, Three.js, Shiny"
-        - "Machine learning: Scikit-learn, TensorFlow"
-    - title: Other Skills
+        - "Data processing: NumPy, Pandas, Dask, SciPy"
+        - "Geo-data processing: Geopandas, Osmium, Overpass, PlotOptiX, Pyrosm, Shapely, Spatialpandas, Rasterio, OpenLayers"
+        - "Data visualization:  d3.js, Three.js, WebGL, Vega-lite, Shiny, Matplotlib, Seaborn, Plotly"
+        - "Machine learning: Scikit-learn, TensorFlow, Keras, PyTorch, nltk"
+    - title: Soft Skills
+      items:
+        - "Prototyping, client requirements analysis, usability assessment, project evaluation, teamwork, time management, leadership, technical writing"
+    - title: Others
       items:
         - Version control - Git
         - Latex/Overleaf
@@ -143,8 +188,7 @@
       items:
         - "Score: 313"
         - "Verbal Reasoning: 152, Quantitative Reasoning: 161, Analytical Writing: 4.0"
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> listening to music, playing Guitar, singing, travelling, cycling.
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> listening to music, playing Guitar, singing, travelling, cycling.
