--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -231,7 +231,7 @@
       description: "Volunteer for <a href='https://www.evl.uic.edu/events/2655'>CAVE3 demos</a> hosted by EVL, UIC."
     - year: 2022-2023
       description: "<a href='https://bsa.org.uic.edu/officers'>Vice President of Media</a> of Bangladeshi Student Association at UIC."
-    - year: Oct 2021
+    - year: 2021
       description: "<a href='https://www.evl.uic.edu/events/2596'>IEEE VIS Satelite Event (2021)</a> volunteer. Held at EVL, UIC."
     - year: 2018
       description: "Class Representative, Department of CSE at Military Institute of Science and Technology."
